# chessCLI

./: .gitignore  CMakeLists.txt  Makefile  README.md  chessCLI  compile_commands.json
.cache/clangd/index/: board.cpp.175224E8237F3DDB.idx  board.cpp.649507E52DDF9875.idx  board.hpp.33694DA1A79850C5.idx  board.hpp.7F626A1BFDDED428.idx  board_helper.cpp.A325795ABB871C8B.idx  board_helper.cpp.E9C7F921435C5789.idx  board_helper.hpp.10EE5BBC7F2BAAE2.idx  board_helper.hpp.DB895B25E69DE3A8.idx  fen.cpp.03A84A8C77BB9660.idx  fen.cpp.5C74CB804FDE6B33.idx  fen.hpp.A4E89867C06560AF.idx  fen.hpp.BC35DFDDC5298D80.idx  game.cpp.28447851553A0ED2.idx  game.cpp.CDB9E8CC17E9A57B.idx  game.hpp.0DFEFB5241002141.idx  game.hpp.A6086D6C559C980D.idx  gamemetadata.hpp.25CBF90EE5E81337.idx  gamemetadata.hpp.F29E732D76775633.idx  logger.hpp.36494A4F085AF1D1.idx  main.cpp.4D50BF53CEBE84BB.idx  move.cpp.5BAB6CE6B10DCBD1.idx  move.cpp.E94B99AD4C0D0E84.idx  move.hpp.8FE7461511717D62.idx  (+11 more)
include/: board.hpp  board_helper.hpp  fen.hpp  game.hpp  gamemetadata.hpp  logger.hpp  move.hpp  move_helper.hpp  piece.hpp  tile.hpp
src/: a.out  board.cpp  board.hpp  board_helper.cpp  chessCLI  fen.cpp  fen.hpp  game.cpp  game.hpp  gamemetadata.hpp  logger.cpp  main.cpp  move.cpp  move_helper.cpp  piece.cpp  piece.hpp  tile.cpp  tile.hpp
src/board/: board.cpp  board.hpp  board_helper.cpp  board_helper.hpp
src/fen/: fen.cpp  fen.hpp
src/game/: game.cpp  game.hpp  gamemetadata.hpp
src/moveHandler/: move.cpp  move.hpp  move_type.hpp
src/piece/: piece.hpp
src/tile/: tile.cpp  tile.hpp
